# mandelbrot_kokkos_cmake

./: .gitignore  CMakeLists.txt  Makefile.bare  README.md  kokkos_shared.h
cmake/: buildExternal_Kokkos.cmake  build_or_find_kokkos.cmake  initKokkosModulePath.cmake
src/: CMakeLists.txt  Makefile.bare  MyTimer.h  constants.h  kokkos_shared.h  main.cpp  mandelbrot.h  write_ppm.cpp  write_ppm.h  write_screen.cpp  write_screen.h
